--- a/sites/all/themes/public_themes/kopernikus/css/global.css
+++ b/sites/all/themes/public_themes/kopernikus/css/global.css
@@ -168,6 +168,13 @@ dd {
 	max-width: 100%;
 	height: auto;
 }
+
+img.left {
+  float: left;
+}
+img.right {
+  float: right;
+}
 /*--------------Allmänt---------------*/
 .field-name-body img,
 .field-type-image img {
